--- a/shared/package.json
+++ b/shared/package.json
@@ -10,11 +10,13 @@
   "dependencies": {
     "@http-wizard/core": "^1.3.20",
     "@sinclair/typebox": "^0.25.21",
+    "he": "^1.2.0",
     "injecti": "^1.0.5",
     "server": "*",
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/he": "^1.2.3",
     "@types/jest": "^29.5.1",
     "axios": "^1.7.7",
     "jest": "^29.7.0"
