--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -52,5 +52,8 @@
   "compareFolders.ignoreAllWhiteSpaces": true,
   "compareFolders.ignoreEmptyLines": true,
   "compareFolders.ignoreWhiteSpaces": true,
-  "compareFolders.respectGitIgnore": true
+  "compareFolders.respectGitIgnore": true,
+  "[shellscript]": {
+    "editor.defaultFormatter": "foxundermoon.shell-format"
+  }
 }
