--- a/ui/package.json
+++ b/ui/package.json
@@ -16,9 +16,14 @@
     "theme": "chakra-cli tokens theme/theme.ts"
   },
   "dependencies": {
+    "@chakra-ui/checkbox": "^2.3.2",
     "@chakra-ui/icons": "^2.1.1",
+    "@chakra-ui/image": "^2.1.0",
+    "@chakra-ui/layout": "^2.3.1",
     "@chakra-ui/next-js": "^2.2.0",
     "@chakra-ui/react": "^2.8.2",
+    "@chakra-ui/system": "^2.6.2",
+    "@chakra-ui/table": "^2.1.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@http-wizard/core": "^1.3.16",
@@ -52,7 +57,6 @@
     "react-notion-x": "^6.16.0",
     "react-select": "^5.8.0",
     "remove-accents": "^0.5.0",
-    "server": "workspace:^",
     "shared": "workspace:^",
     "typescript": "^5.6.3",
     "zod": "^3.23.8"
