--- a/server/package.json
+++ b/server/package.json
@@ -58,6 +58,7 @@
     "fastify-type-provider-zod": "^2.1.0",
     "file-saver": "^2.0.5",
     "geolib": "^3.3.4",
+    "injecti": "^1.0.5",
     "jschardet": "^3.1.3",
     "jsonwebtoken": "^9.0.2",
     "kysely": "0.27.2",
@@ -109,7 +110,7 @@
     "testcontainers": "^10.13.1",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.1",
-    "tsup": "^8.3.0",
+    "tsup": "8.3.0",
     "typescript": "^5.6.3"
   },
   "files": [
