--- a/ui/package.json
+++ b/ui/package.json
@@ -43,6 +43,7 @@
     "echarts": "^5.4.2",
     "framer-motion": "^10.9.1",
     "iframe-resizer": "^4.4.0",
+    "lodash": "^4.17.21",
     "maplibre-gl": "^4.1.0",
     "next": "14.1.3",
     "next-plausible": "^3.7.2",
