--- a/shared/package.json
+++ b/shared/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@http-wizard/core": "^1.3.20",
     "he": "^1.2.0",
+    "server": "workspace:^",
     "type-fest": "^4.26.1",
     "zod": "^3.23.8",
     "zod-to-json-schema": "^3.23.3"
