--- a/.infra/ansible/roles/setup/files/app/.overrides/production/docker-compose.env.yml
+++ b/.infra/ansible/roles/setup/files/app/.overrides/production/docker-compose.env.yml
@@ -22,40 +22,40 @@ services:
     networks:
       - pilotage_network
     environment:
-      - PILOTAGE_POSTGRES_URI={{ vault[env_type].PILOTAGE_POSTGRES_URI }}
-      - PILOTAGE_POSTGRES_CA={{ vault[env_type].PILOTAGE_POSTGRES_CA }}
-      - PILOTAGE_ENV=production
-      - PILOTAGE_LOG_LEVEL=info
-      - PILOTAGE_HOST={{ host_name }}
-      - PILOTAGE_LOG_DESTINATIONS=stdout,mongodb,slack
-      - PILOTAGE_PUBLIC_URL=https://{{ dns_name }}
-      - PILOTAGE_SLACK_WEBHOOK_URL={{ vault[env_type].PILOTAGE_SLACK_WEBHOOK_URL }}
-      - PILOTAGE_SLACK_TOKEN={{ vault[env_type].PILOTAGE_SLACK_TOKEN }}
-      - PILOTAGE_SLACK_SIGNING_SECRET={{ vault[env_type].PILOTAGE_SLACK_SIGNING_SECRET }}
-      - PILOTAGE_SLACK_CHANEL={{ vault[env_type].PILOTAGE_SLACK_CHANEL }}
-      - PILOTAGE_API_KEY={{ vault[env_type].PILOTAGE_API_KEY }}
-      - PILOTAGE_AUTH_PASSWORD_HASH_ROUNDS={{ vault[env_type].PILOTAGE_AUTH_PASSWORD_HASH_ROUNDS }}
-      - PILOTAGE_INSERJEUNES_USERNAME={{ vault[env_type].PILOTAGE_INSERJEUNES_USERNAME }}
-      - PILOTAGE_INSERJEUNES_PASSWORD={{ vault[env_type].PILOTAGE_INSERJEUNES_PASSWORD }}
-      - PILOTAGE_AUTH_JWT_SECRET={{ vault[env_type].PILOTAGE_AUTH_JWT_SECRET }}
-      - PILOTAGE_ACTIVATION_JWT_SECRET={{ vault[env_type].PILOTAGE_ACTIVATION_JWT_SECRET }}
-      - PILOTAGE_RESET_PASSWORD_JWT_SECRET={{ vault[env_type].PILOTAGE_RESET_PASSWORD_JWT_SECRET }}
-      - PILOTAGE_EMAIL_FROM={{ vault[env_type].PILOTAGE_EMAIL_FROM }}
-      - PILOTAGE_EMAIL={{ vault[env_type].PILOTAGE_EMAIL }}
-      - PILOTAGE_SMTP_HOST={{ vault[env_type].PILOTAGE_SMTP_HOST }}
-      - PILOTAGE_SMTP_PORT={{ vault[env_type].PILOTAGE_SMTP_PORT }}
-      - PILOTAGE_SMTP_SECURE={{ vault[env_type].PILOTAGE_SMTP_SECURE }}
-      - PILOTAGE_SMTP_AUTH_USER={{ vault[env_type].PILOTAGE_SMTP_AUTH_USER }}
-      - PILOTAGE_SMTP_AUTH_PASS={{ vault[env_type].PILOTAGE_SMTP_AUTH_PASS }}
-      - PILOTAGE_DNE_CODE_VERIFIER_JWT_SECRET={{ vault[env_type].PILOTAGE_DNE_CODE_VERIFIER_JWT_SECRET }}
-      - PILOTAGE_DNE_CLIENT_ID={{ vault[env_type].PILOTAGE_DNE_CLIENT_ID }}
-      - PILOTAGE_DNE_CLIENT_SECRET={{ vault[env_type].PILOTAGE_DNE_CLIENT_SECRET }}
-      - PILOTAGE_DNE_REDIRECT_URI=https://{{ dns_name }}/api/dne_connect
-      - PILOTAGE_S3_REGION={{ vault[env_type].PILOTAGE_S3_REGION }}
-      - PILOTAGE_S3_BUCKET={{ vault[env_type].PILOTAGE_S3_BUCKET }}
-      - PILOTAGE_S3_ENDPOINT={{ vault[env_type].PILOTAGE_S3_ENDPOINT }}
-      - PILOTAGE_S3_ACCESS_KEY={{ vault[env_type].PILOTAGE_S3_ACCESS_KEY }}
-      - PILOTAGE_S3_SECRET_KEY={{ vault[env_type].PILOTAGE_S3_SECRET_KEY }}
+      - PSQL_URI={{ vault[env_type].PSQL_URI }}
+      - PSQL_CA={{ vault[env_type].PSQL_CA }}
+      - ENV=production
+      - LOG_LEVEL=info
+      - HOST={{ host_name }}
+      - LOG_DESTINATIONS=stdout,mongodb,slack
+      - PUBLIC_URL=https://{{ dns_name }}
+      - SLACK_WEBHOOK_URL={{ vault[env_type].SLACK_WEBHOOK_URL }}
+      - SLACK_TOKEN={{ vault[env_type].SLACK_TOKEN }}
+      - SLACK_SIGNING_SECRET={{ vault[env_type].SLACK_SIGNING_SECRET }}
+      - SLACK_CHANEL={{ vault[env_type].SLACK_CHANEL }}
+      - API_KEY={{ vault[env_type].API_KEY }}
+      - AUTH_PASSWORD_HASH_ROUNDS={{ vault[env_type].AUTH_PASSWORD_HASH_ROUNDS }}
+      - INSERJEUNES_USERNAME={{ vault[env_type].INSERJEUNES_USERNAME }}
+      - INSERJEUNES_PASSWORD={{ vault[env_type].INSERJEUNES_PASSWORD }}
+      - AUTH_JWT_SECRET={{ vault[env_type].AUTH_JWT_SECRET }}
+      - ACTIVATION_JWT_SECRET={{ vault[env_type].ACTIVATION_JWT_SECRET }}
+      - RESET_PASSWORD_JWT_SECRET={{ vault[env_type].RESET_PASSWORD_JWT_SECRET }}
+      - EMAIL_FROM={{ vault[env_type].EMAIL_FROM }}
+      - EMAIL={{ vault[env_type].EMAIL }}
+      - SMTP_HOST={{ vault[env_type].SMTP_HOST }}
+      - SMTP_PORT={{ vault[env_type].SMTP_PORT }}
+      - SMTP_SECURE={{ vault[env_type].SMTP_SECURE }}
+      - SMTP_AUTH_USER={{ vault[env_type].SMTP_AUTH_USER }}
+      - SMTP_AUTH_PASS={{ vault[env_type].SMTP_AUTH_PASS }}
+      - DNE_CODE_VERIFIER_JWT_SECRET={{ vault[env_type].DNE_CODE_VERIFIER_JWT_SECRET }}
+      - DNE_CLIENT_ID={{ vault[env_type].DNE_CLIENT_ID }}
+      - DNE_CLIENT_SECRET={{ vault[env_type].DNE_CLIENT_SECRET }}
+      - DNE_REDIRECT_URI=https://{{ dns_name }}/api/dne_connect
+      - S3_REGION={{ vault[env_type].S3_REGION }}
+      - S3_BUCKET={{ vault[env_type].S3_BUCKET }}
+      - S3_ENDPOINT={{ vault[env_type].S3_ENDPOINT }}
+      - S3_ACCESS_KEY={{ vault[env_type].S3_ACCESS_KEY }}
+      - S3_SECRET_KEY={{ vault[env_type].S3_SECRET_KEY }}
       - NOTION_TOKEN={{ vault[env_type].NOTION_TOKEN }}
       - NOTION_DB_CHANGELOG_ID={{ vault[env_type].NOTION_DB_CHANGELOG_ID }}
       - NOTION_DB_GLOSSAIRE_ID={{ vault[env_type].NOTION_DB_GLOSSAIRE_ID }}
@@ -69,5 +69,5 @@ services:
   metabase:
     environment:
       - MB_SITE_URL=https://orion.inserjeunes.beta.gouv.fr/metabase
-      - MB_DB_CONNECTION_URI={{ vault[env_type].PILOTAGE_METABASE_DB_URI }}
+      - MB_DB_CONNECTION_URI={{ vault[env_type].METABASE_DB_URI }}
       - MB_DB_TYPE=postgres
