--- a/server/.env.test
+++ b/server/.env.test
@@ -1,30 +1,30 @@
-PILOTAGE_INSERJEUNES_USERNAME: username
-PILOTAGE_INSERJEUNES_PASSWORD: pass
+INSERJEUNES_USERNAME: username
+INSERJEUNES_PASSWORD: pass
 DATABASE_URL=postgres://postgres:password@localhost:5555/postgres
-PILOTAGE_POSTGRES_URI=postgresql://postgres:password@localhost:5555/postgres
+PSQL_URI=postgresql://postgres:password@localhost:5555/postgres
 DATABASE_PORT=5555
-PILOTAGE_SMTP_HOST: localhost
-PILOTAGE_SMTP_PORT: 1025
-PILOTAGE_SMTP_SECURE: false
-PILOTAGE_EMAIL_FROM: from@from.fr
-PILOTAGE_AUTH_JWT_SECRET: toto
-PILOTAGE_ACTIVATION_JWT_SECRET: toto2
-PILOTAGE_RESET_PASSWORD_JWT_SECRET: toto3
-PILOTAGE_PUBLIC_URL: http://localhost
-PILOTAGE_ENV=test
-PILOTAGE_DNE_CODE_VERIFIER_JWT_SECRET=test
-PILOTAGE_DNE_CLIENT_ID=test
-PILOTAGE_DNE_CLIENT_SECRET=test
-PILOTAGE_DNE_REDIRECT_URI=test
+SMTP_HOST: localhost
+SMTP_PORT: 1025
+SMTP_SECURE: false
+EMAIL_FROM: from@from.fr
+AUTH_JWT_SECRET: toto
+ACTIVATION_JWT_SECRET: toto2
+RESET_PASSWORD_JWT_SECRET: toto3
+PUBLIC_URL: http://localhost
+ENV=test
+DNE_CODE_VERIFIER_JWT_SECRET=test
+DNE_CLIENT_ID=test
+DNE_CLIENT_SECRET=test
+DNE_REDIRECT_URI=test
 NOTION_TOKEN=test
 NOTION_DB_CHANGELOG_ID=test
 NOTION_DB_GLOSSAIRE_ID=test
 NOTION_DB_EDITO_ID=test
-PILOTAGE_S3_REGION=test
-PILOTAGE_S3_BUCKET=test
-PILOTAGE_S3_ENDPOINT=test
-PILOTAGE_S3_ACCESS_KEY=test
-PILOTAGE_S3_SECRET_KEY=test
+S3_REGION=test
+S3_BUCKET=test
+S3_ENDPOINT=test
+S3_ACCESS_KEY=test
+S3_SECRET_KEY=test
 SENTRY_DSN=test
 SENTRY_AUTH_TOKEN=test
 METABASE_AUTH_TOKEN=test
