--- a/.infra/files/configs/reverse_proxy/owasp-crs/REQUEST-900-EXCLUSION-RULES-BEFORE-CRS.conf
+++ b/.infra/files/configs/reverse_proxy/owasp-crs/REQUEST-900-EXCLUSION-RULES-BEFORE-CRS.conf
@@ -207,6 +207,8 @@ SecRule REQUEST_FILENAME "@beginsWith /metabase" \
     nolog,\
     ctl:ruleRemoveById=941000-942999"
 
+SecRule REQUEST_URI "@beginsWith /" "id:1006,phase:request,pass,nolog,ctl:ruleRemoveById=933000-933999"
+
 # Disable "HTTP header is restricted by policy (/accept-charset/)"
 SecRule REQUEST_FILENAME "@beginsWith /api" \
     "id:1005,\
@@ -222,3 +224,15 @@ SecRule REQUEST_FILENAME "@beginsWith /api" \
     pass,\
     nolog,\
     ctl:ruleRemoveById=920600"
+
+# Allow upload to route /api/intention/ ... /files
+# Chain to match the request URI
+SecRule REQUEST_URI "@beginsWith /api/intention/" "chain,phase:1,id:2001,pass,nolog"
+SecRule REQUEST_URI "@endsWith /files" "chain"
+SecRule REQUEST_HEADERS:Content-Type "multipart/form-data" "chain"
+SecRule REQUEST_URI "@beginsWith /api/intention/" "ctl:ruleRemoveById=921110"
+
+# Chain to match multipart/form-data content-type
+SecRule REQUEST_HEADERS:Content-Type "multipart/form-data" "chain,phase:1,id:2002,pass,nolog"
+SecRule REQUEST_URI "@beginsWith /api/intention/" "chain"
+SecRule REQUEST_URI "@endsWith /files" "ctl:ruleRemoveById=921110"
