--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,14 @@ services:
   smtp:
     image: axllent/mailpit:latest
     restart: unless-stopped
+    # deploy:
+    #   resources:
+    #     limits:
+    #       memory: 128m
+    #   update_config:
+    #     failure_action: rollback
+    #   rollback_config:
+    #     parallelism: 0
     ports:
       - 1025:1025
       - 8025:8025
