--- a/.infra/.env_ui
+++ b/.infra/.env_ui
@@ -1,3 +1,5 @@
 # Do not add NEXT*PUBLIC* env as they won't be available on build time
 
 # If you need to add public env, use config.public.ts file instead
+
+# NEXT_PUBLIC_SENTRY_AUTH_TOKEN={{ vault[env_type].SENTRY_AUTH_TOKEN }} To add to dockerfile
