--- a/.infra/files/configs/reverse_proxy/locations/10_api.conf.template
+++ b/.infra/files/configs/reverse_proxy/locations/10_api.conf.template
@@ -3,3 +3,11 @@ location /api {
     include includes/error_page_json.conf;
     include includes/proxy.conf;
 }
+
+location ~ ^/api/intention/[A-Za-z0-9]+/files/?$ {
+    client_max_body_size    10M;
+    
+    set $upstream http://server:5000;
+    include includes/error_page_json.conf;
+    include includes/proxy.conf;
+}
