refactor: build wip

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,8 +1,37 @@
-.github
-.git-hooks
+*
+
+!/server/src
+!/server/static
+!/server/package.json
+!/server/tsconfig.json
+!/server/tsoa.json
+!/server/tsup.config.ts
+
+!/shared
+
+!/extension/package.json
+
+!/ui
+/ui/.env
+/ui/.next
+/ui/.eslintrc.js
+
+!/package.json
+!/.yarn/cache
+!/.yarn/patches
+!/.yarn/plugins
+!/.yarn/releases
+!/.yarn/versions
+!/yarn.lock
+!/.yarnrc.yml
+
 .git/
 .infra
-.vscode
-**/node_modules
+**/.local
 **/dist
-
+**/coverage
+**/node_modules
+*/tests
+**/logs
+**/*.test.ts
+!**/tsconfig.json
