--- a/ui/package.json
+++ b/ui/package.json
@@ -44,8 +44,8 @@
     "iframe-resizer": "^4.4.0",
     "lodash": "^4.17.21",
     "maplibre-gl": "^4.1.0",
-    "next": "14.1.3",
-    "next-plausible": "^3.7.2",
+    "next": "^14.2.15",
+    "next-plausible": "^3.12.2",
     "notion-client": "^6.16.0",
     "qs": "^6.11.1",
     "react": "18.2.0",
