refactor: prepare deploy

--- a/.infra/env.ini
+++ b/.infra/env.ini
@@ -26,6 +26,14 @@ dns_name=recette-2.{{domain_name}}.inserjeunes.incubateur.net
 host_name={{product_name}}-recette-2
 env_type=recette
 
+
+[recette-next]
+91.134.19.45
+[recette-next:vars]
+dns_name={{domain_name}}-recette-next.inserjeunes.incubateur.net
+host_name={{product_name}}-recette
+env_type=recette
+
 [local]
 localhost ansible_host=127.0.0.1 ansible_connection=local
 [local:vars]
