chore: fix env name

--- a/.infra/env.ini
+++ b/.infra/env.ini
@@ -27,9 +27,9 @@ host_name={{product_name}}-recette-2
 env_type=recette
 
 
-[recette-next]
+[recettenext]
 91.134.19.45
-[recette-next:vars]
+[recettenext:vars]
 dns_name={{domain_name}}-recette-next.inserjeunes.incubateur.net
 host_name={{product_name}}-recette
 env_type=recette
