chore(waf): comment duplicate rule

--- a/.infra/files/configs/reverse_proxy/owasp-crs/REQUEST-900-EXCLUSION-RULES-BEFORE-CRS.conf
+++ b/.infra/files/configs/reverse_proxy/owasp-crs/REQUEST-900-EXCLUSION-RULES-BEFORE-CRS.conf
@@ -207,8 +207,6 @@ SecRule REQUEST_FILENAME "@beginsWith /metabase" \
     nolog,\
     ctl:ruleRemoveById=941000-942999"
 
-SecRule REQUEST_URI "@beginsWith /" "id:1006,phase:request,pass,nolog,ctl:ruleRemoveById=933000-933999"
-
 # Disable "HTTP header is restricted by policy (/accept-charset/)"
 SecRule REQUEST_FILENAME "@beginsWith /api" \
     "id:1005,\
@@ -217,9 +215,18 @@ SecRule REQUEST_FILENAME "@beginsWith /api" \
     nolog,\
     ctl:ruleRemoveById=920450"
 
+SecRule REQUEST_URI "@beginsWith /" "id:1006,phase:request,pass,nolog,ctl:ruleRemoveById=933000-933999"
+
+SecRule REQUEST_URI "@beginsWith /intentions" \
+    "id:1007,\
+    phase:request,\
+    pass,\
+    nolog,\
+    ctl:ruleRemoveById=932110"
+
 # Disable "Illegal Accept header: charset parameter"
 SecRule REQUEST_FILENAME "@beginsWith /api" \
-    "id:1006,\
+    "id:1008,\
     phase:1,\
     pass,\
     nolog,\
