--- a/.infra/files/configs/reverse_proxy/owasp-crs/REQUEST-932-APPLICATION-ATTACK-RCE.conf
+++ b/.infra/files/configs/reverse_proxy/owasp-crs/REQUEST-932-APPLICATION-ATTACK-RCE.conf
@@ -69,9 +69,9 @@
 # bring additional examples which can be useful then tuning a service.
 
 # ModSecurity Rule Exclusion: Disable Window Command Inject rules for intentions submit
-SecRule REQUEST_URI "@beginsWith /intentions" \
-    "id:1005,\
-    phase:request,\
-    pass,\
-    nolog,\
-    ctl:ruleRemoveById=932110"
+# SecRule REQUEST_URI "@beginsWith /intentions" \
+#     "id:1005,\
+#     phase:request,\
+#     pass,\
+#     nolog,\
+#     ctl:ruleRemoveById=932110"
