--- a/server/.env.test
+++ b/server/.env.test
@@ -1,17 +1,42 @@
-INSERJEUNES_USERNAME: username
-INSERJEUNES_PASSWORD: pass
-DATABASE_URL=postgres://postgres:password@localhost:5555/postgres
-PSQL_URI=postgresql://postgres:password@localhost:5555/postgres
-DATABASE_PORT=5555
-SMTP_HOST: localhost
-SMTP_PORT: 1025
-SMTP_SECURE: false
-EMAIL_FROM: from@from.fr
-AUTH_JWT_SECRET: toto
-ACTIVATION_JWT_SECRET: toto2
-RESET_PASSWORD_JWT_SECRET: toto3
-PUBLIC_URL: http://localhost
+# Environment
 ENV=test
+PUBLIC_URL=http://localhost
+SERVER_PORT=5000
+LOG_TYPE=console
+LOG_LEVEL=info
+# Sentry
+SENTRY_DSN=
+SENTRY_AUTH_TOKEN=
+# PSQL
+PSQL_HOST=localhost
+PSQL_PORT=5432
+PQSL_USER=postgres
+PSQL_PWD=password
+PSQL_URI=postgresql://postgres:password@localhost:5432/orion-test-VITEST_POOL_ID
+PSQL_CA=
+PSQL_LOG_LEVEL=query
+# Auth
+AUTH_JWT_SECRET=abcdef
+ACTIVATION_JWT_SECRET=abcdef
+RESET_PASSWORD_JWT_SECRET=abcdef
+# SMTP
+EMAIL=mail@mail.com
+EMAIL_FROM=mail@mail.com
+SMTP_HOST=localhost
+SMTP_PORT=1025
+SMTP_WEBHOOK_KEY=none
+SMTP_AUTH_USER=test
+SMTP_AUTH_PASS=test
+# SLACK
+SLACK_WEBHOOK_URL=
+SLACK_TOKEN=
+SLACK_SIGNING_SECRET=
+SLACK_CHANNEL=
+# PRODUCT
+INSERJEUNES_USERNAME=username
+INSERJEUNES_PASSWORD=pass
+FRANCE_TRAVAIL_CLIENT=username
+FRANCE_TRAVAIL_SECRET=pass
 DNE_CODE_VERIFIER_JWT_SECRET=test
 DNE_CLIENT_ID=test
 DNE_CLIENT_SECRET=test
@@ -20,12 +45,14 @@ NOTION_TOKEN=test
 NOTION_DB_CHANGELOG_ID=test
 NOTION_DB_GLOSSAIRE_ID=test
 NOTION_DB_EDITO_ID=test
+# S3
 S3_REGION=test
 S3_BUCKET=test
 S3_ENDPOINT=test
 S3_ACCESS_KEY=test
 S3_SECRET_KEY=test
-SENTRY_DSN=test
-SENTRY_AUTH_TOKEN=test
+# Metabase
 METABASE_AUTH_TOKEN=test
-PILOTAGE_SQL_LOG_LEVEL=
+# PUBLIC
+PUBLIC_VERSION=0.0.1
+PUBLIC_PRODUCT_NAME="orion"
