--- a/server/package.json
+++ b/server/package.json
@@ -16,10 +16,7 @@
     "dev": "tsup-node --env.TSUP_WATCH true",
     "build": "tsup-node --env.NODE_ENV production",
     "typecheck": "NODE_OPTIONS='--max-old-space-size=8192' tsc --noEmit",
-    "kysely": "npx kysely-codegen --schema public --out-file=./src/db/schema.ts --dialect postgres && yarn prettier:fix",
-    "test": "jest --config ./test/jest.config.js",
-    "test:unit": "jest --config ./test/jest.config.js",
-    "test:integration": "jest -i --config ./test/jest-integration.config.js"
+    "kysely": "npx kysely-codegen --schema public --out-file=./src/db/schema.ts --dialect postgres && yarn prettier:fix"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.574.0",
@@ -103,16 +100,16 @@
     "@types/qs": "^6.9.7",
     "@types/uuid": "^9.0.4",
     "aws-sdk-client-mock": "^4.0.0",
-    "aws-sdk-client-mock-jest": "^4.0.0",
+    "aws-sdk-client-mock-vitest": "^4.0.0",
     "esbuild-jest": "^0.5.0",
     "jest": "^29.7.0",
     "kysely-codegen": "^0.10.0",
     "nock": "^13.5.5",
-    "testcontainers": "^10.13.1",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.1",
     "tsup": "8.3.0",
-    "typescript": "^5.6.3"
+    "typescript": "^5.6.3",
+    "vitest": "^2.1.3"
   },
   "files": [
     "src/**/*",
