--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,9 +4,9 @@ on:
   workflow_call:
 
 jobs:
-  tests:
+  typecheck:
     timeout-minutes: 10
-    name: "Tests"
+    name: "typecheck"
     runs-on: ubuntu-latest
 
     steps:
@@ -15,7 +15,40 @@ jobs:
 
       - uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version: 22
+
+      - uses: actions/cache@v4
+        with:
+          path: |
+            **/node_modules
+            .yarn/install-state.gz
+            .yarn/cache
+          key: yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: yarn-
+
+      - name: Install dependencies
+        run: yarn install
+
+      - name: typecheck
+        run: yarn typecheck:ci
+
+  tests:
+    timeout-minutes: 10
+    name: "Tests"
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout project
+        uses: actions/checkout@v4
+        with:
+          lfs: true
+
+      - name: lfs pull
+        run: git lfs pull
+
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 22
 
       - uses: actions/cache@v4
         with:
@@ -31,9 +64,6 @@ jobs:
 
       - name: Make sure to use same dependencies version across all packages
         run: yarn dedupe --check
-
-      - name: typecheck
-        run: yarn typecheck:ci
 
       - name: lint
         run: yarn lint
