--- a/.github/workflows/_deploy.yml
+++ b/.github/workflows/_deploy.yml
@@ -9,7 +9,7 @@ on:
         options:
           - production
           - recette
-          - recettenext
+          - recette2
       app_version:
         description: app version
         type: string
