chore(infra): env type

--- a/.infra/env.ini
+++ b/.infra/env.ini
@@ -24,7 +24,7 @@ env_type=recette
 [recette2:vars]
 dns_name=recette-2.orion.inserjeunes.incubateur.net
 host_name=orion-recette-2
-env_type=recette
+env_type=recette2
 
 [local]
 localhost ansible_host=127.0.0.1 ansible_connection=local
