--- a/server/.env.test
+++ b/server/.env.test
@@ -8,11 +8,11 @@ LOG_LEVEL=info
 SENTRY_DSN=
 SENTRY_AUTH_TOKEN=
 # PSQL
-PSQL_HOST=localhost
+PSQL_HOST=127.0.0.1
 PSQL_PORT=5432
 PQSL_USER=postgres
 PSQL_PWD=password
-PSQL_URI=postgresql://postgres:password@localhost:5432/orion-test-VITEST_POOL_ID
+PSQL_URI=postgresql://postgres:password@127.0.0.1:5432/orion-test-VITEST_POOL_ID
 PSQL_CA=
 PSQL_LOG_LEVEL=query
 # Auth
