--- a/.gitattributes
+++ b/.gitattributes
@@ -79,7 +79,7 @@
 *.woff      binary
 *.woff2     binary
 # Databases
-# *.dump filter=lfs diff=lfs merge=lfs -text
-# .infra/files/configs/mongodb/seed.gpg filter=lfs diff=lfs merge=lfs -text
+*.dump filter=lfs diff=lfs merge=lfs -text
+.infra/files/configs/mongodb/seed.gpg filter=lfs diff=lfs merge=lfs -text
 *.dump     binary
 seed.gpg     binary
