--- a/.gitattributes
+++ b/.gitattributes
@@ -75,4 +75,4 @@
 *.otf       binary
 *.woff      binary
 *.woff2     binary
-*.dump filter=lfs diff=lfs merge=lfs -text
+#*.dump filter=lfs diff=lfs merge=lfs -text
