--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,7 +1,7 @@
 name: Release version
 on:
   push:
-    branches: [main, hotfix, next]
+    branches: [main, hotfix, next, fix/next-lfs]
 
 jobs:
   tests:
