--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
   ],
   "dependencies": {
     "@sentry/cli": "^2.37.0",
+    "@sinclair/typebox": "^0.33.18",
+    "add": "^2.0.6",
     "dotenv": "^16.4.5",
     "eslint-plugin-react": "^7.37.1",
     "global": "4.4.0",
-    "husky": "^9.1.6"
+    "husky": "^9.1.6",
+    "yarn": "^1.22.22"
   },
   "scripts": {
     "setup": ".bin/product init:env",
