--- a/.infra/env.ini
+++ b/.infra/env.ini
@@ -22,8 +22,8 @@ env_type=recette
 [recette2]
 91.134.19.45
 [recette2:vars]
-dns_name=recette-2.orion.inserjeunes.incubateur.net
-host_name=orion-recette-2
+dns_name=recette-2.{{domain_name}}.inserjeunes.incubateur.net
+host_name={{product_name}}-recette-2
 env_type=recette2
 
 [local]
