--- a/.github/workflows/_deploy.yml
+++ b/.github/workflows/_deploy.yml
@@ -9,6 +9,7 @@ on:
         options:
           - production
           - recette
+          - recette1new
           - recette2
       app_version:
         description: app version
