--- a/.infra/env.ini
+++ b/.infra/env.ini
@@ -19,6 +19,13 @@ dns_name=recette-1.{{domain_name}}.inserjeunes.incubateur.net
 host_name={{product_name}}-recette-1
 env_type=recette
 
+[recette1new]
+91.134.6.195
+[recette1new:vars]
+dns_name=recette-1-new.{{domain_name}}.inserjeunes.incubateur.net
+host_name={{product_name}}-recette-1-new
+env_type=recette1new
+
 [recette2]
 91.134.19.45
 [recette2:vars]
