fix(infra): ajout d'un env type et env name pour différencier les environnements de recette

--- a/.infra/.env_server
+++ b/.infra/.env_server
@@ -1,56 +1,56 @@
 # Environment
 ENV={{ env_type }}
-PUBLIC_URL={{ vault[env_type].PUBLIC_URL }}
-SERVER_PORT={{ vault[env_type].SERVER_PORT }}
-LOG_TYPE={{ vault[env_type].LOG_TYPE }}
+PUBLIC_URL={{ vault[env_name].PUBLIC_URL }}
+SERVER_PORT={{ vault[env_name].SERVER_PORT }}
+LOG_TYPE={{ vault[env_name].LOG_TYPE }}
 LOG_LEVEL=info
 # Sentry
-SENTRY_DSN={{ vault[env_type].SENTRY_DSN }}
-SENTRY_AUTH_TOKEN={{ vault[env_type].SENTRY_AUTH_TOKEN }}
+SENTRY_DSN={{ vault[env_name].SENTRY_DSN }}
+SENTRY_AUTH_TOKEN={{ vault[env_name].SENTRY_AUTH_TOKEN }}
 # PSQL
-PSQL_HOST={{ vault[env_type].PSQL_HOST }}
-PSQL_PORT={{ vault[env_type].PSQL_PORT }}
-PQSL_USER={{ vault[env_type].PQSL_USER }}
-PSQL_PWD={{ vault[env_type].PSQL_PWD }}
-PSQL_URI={{ vault[env_type].PSQL_URI }}
-PSQL_CA={{ vault[env_type].PSQL_CA }}
-PSQL_LOG_LEVEL={{ vault[env_type].PSQL_LOG_LEVEL }}
+PSQL_HOST={{ vault[env_name].PSQL_HOST }}
+PSQL_PORT={{ vault[env_name].PSQL_PORT }}
+PQSL_USER={{ vault[env_name].PQSL_USER }}
+PSQL_PWD={{ vault[env_name].PSQL_PWD }}
+PSQL_URI={{ vault[env_name].PSQL_URI }}
+PSQL_CA={{ vault[env_name].PSQL_CA }}
+PSQL_LOG_LEVEL={{ vault[env_name].PSQL_LOG_LEVEL }}
 # Auth
-AUTH_JWT_SECRET={{ vault[env_type].AUTH_JWT_SECRET }}
-ACTIVATION_JWT_SECRET={{ vault[env_type].ACTIVATION_JWT_SECRET }}
-RESET_PASSWORD_JWT_SECRET={{ vault[env_type].RESET_PASSWORD_JWT_SECRET }}
+AUTH_JWT_SECRET={{ vault[env_name].AUTH_JWT_SECRET }}
+ACTIVATION_JWT_SECRET={{ vault[env_name].ACTIVATION_JWT_SECRET }}
+RESET_PASSWORD_JWT_SECRET={{ vault[env_name].RESET_PASSWORD_JWT_SECRET }}
 # SMTP
 EMAIL={{vault.EMAIL}}
-EMAIL_FROM={{ vault[env_type].EMAIL_FROM }}
-SMTP_HOST={{ vault[env_type].SMTP_HOST }}
-SMTP_PORT={{ vault[env_type].SMTP_PORT }}
-SMTP_WEBHOOK_KEY={{ vault[env_type].SMTP_WEBHOOK_KEY }}
-SMTP_AUTH_USER={{ vault[env_type].SMTP_AUTH_USER }}
-SMTP_AUTH_PASS={{ vault[env_type].SMTP_AUTH_PASS }}
+EMAIL_FROM={{ vault[env_name].EMAIL_FROM }}
+SMTP_HOST={{ vault[env_name].SMTP_HOST }}
+SMTP_PORT={{ vault[env_name].SMTP_PORT }}
+SMTP_WEBHOOK_KEY={{ vault[env_name].SMTP_WEBHOOK_KEY }}
+SMTP_AUTH_USER={{ vault[env_name].SMTP_AUTH_USER }}
+SMTP_AUTH_PASS={{ vault[env_name].SMTP_AUTH_PASS }}
 # SLACK
-SLACK_WEBHOOK_URL={{ vault[env_type].SLACK_WEBHOOK_URL }}
-SLACK_TOKEN={{ vault[env_type].SLACK_TOKEN }}
-SLACK_SIGNING_SECRET={{ vault[env_type].SLACK_SIGNING_SECRET }}
-SLACK_CHANNEL={{ vault[env_type].SLACK_CHANNEL }}
+SLACK_WEBHOOK_URL={{ vault[env_name].SLACK_WEBHOOK_URL }}
+SLACK_TOKEN={{ vault[env_name].SLACK_TOKEN }}
+SLACK_SIGNING_SECRET={{ vault[env_name].SLACK_SIGNING_SECRET }}
+SLACK_CHANNEL={{ vault[env_name].SLACK_CHANNEL }}
 # PRODUCT
-INSERJEUNES_USERNAME={{ vault[env_type].INSERJEUNES_USERNAME }}
-INSERJEUNES_PASSWORD="{{ vault[env_type].INSERJEUNES_PASSWORD }}"
-FRANCE_TRAVAIL_CLIENT={{ vault[env_type].FRANCE_TRAVAIL_CLIENT }}
-FRANCE_TRAVAIL_SECRET={{ vault[env_type].FRANCE_TRAVAIL_SECRET }}
-DNE_CODE_VERIFIER_JWT_SECRET={{ vault[env_type].DNE_CODE_VERIFIER_JWT_SECRET }}
-DNE_CLIENT_ID={{ vault[env_type].DNE_CLIENT_ID }}
-DNE_CLIENT_SECRET={{ vault[env_type].DNE_CLIENT_SECRET }}
-DNE_REDIRECT_URI={{ vault[env_type].DNE_REDIRECT_URI }}
-NOTION_TOKEN={{ vault[env_type].NOTION_TOKEN }}
-NOTION_DB_CHANGELOG_ID={{ vault[env_type].NOTION_DB_CHANGELOG_ID }}
-NOTION_DB_GLOSSAIRE_ID={{ vault[env_type].NOTION_DB_GLOSSAIRE_ID }}
-NOTION_DB_EDITO_ID={{ vault[env_type].NOTION_DB_EDITO_ID }}
+INSERJEUNES_USERNAME={{ vault[env_name].INSERJEUNES_USERNAME }}
+INSERJEUNES_PASSWORD="{{ vault[env_name].INSERJEUNES_PASSWORD }}"
+FRANCE_TRAVAIL_CLIENT={{ vault[env_name].FRANCE_TRAVAIL_CLIENT }}
+FRANCE_TRAVAIL_SECRET={{ vault[env_name].FRANCE_TRAVAIL_SECRET }}
+DNE_CODE_VERIFIER_JWT_SECRET={{ vault[env_name].DNE_CODE_VERIFIER_JWT_SECRET }}
+DNE_CLIENT_ID={{ vault[env_name].DNE_CLIENT_ID }}
+DNE_CLIENT_SECRET={{ vault[env_name].DNE_CLIENT_SECRET }}
+DNE_REDIRECT_URI={{ vault[env_name].DNE_REDIRECT_URI }}
+NOTION_TOKEN={{ vault[env_name].NOTION_TOKEN }}
+NOTION_DB_CHANGELOG_ID={{ vault[env_name].NOTION_DB_CHANGELOG_ID }}
+NOTION_DB_GLOSSAIRE_ID={{ vault[env_name].NOTION_DB_GLOSSAIRE_ID }}
+NOTION_DB_EDITO_ID={{ vault[env_name].NOTION_DB_EDITO_ID }}
 # S3
-S3_REGION={{ vault[env_type].S3_REGION }}
-S3_BUCKET={{ vault[env_type].S3_BUCKET }}
-S3_ENDPOINT={{ vault[env_type].S3_ENDPOINT }}
-S3_ACCESS_KEY={{ vault[env_type].S3_ACCESS_KEY }}
-S3_SECRET_KEY={{ vault[env_type].S3_SECRET_KEY }}
+S3_REGION={{ vault[env_name].S3_REGION }}
+S3_BUCKET={{ vault[env_name].S3_BUCKET }}
+S3_ENDPOINT={{ vault[env_name].S3_ENDPOINT }}
+S3_ACCESS_KEY={{ vault[env_name].S3_ACCESS_KEY }}
+S3_SECRET_KEY={{ vault[env_name].S3_SECRET_KEY }}
 # Metabase
-METABASE_AUTH_TOKEN={{ vault[env_type].METABASE_AUTH_TOKEN }}
+METABASE_AUTH_TOKEN={{ vault[env_name].METABASE_AUTH_TOKEN }}
 # PUBLIC
