--- a/.infra/env.ini
+++ b/.infra/env.ini
@@ -11,6 +11,7 @@ domain_name=orion
 dns_name={{domain_name}}.inserjeunes.beta.gouv.fr
 host_name={{product_name}}-production
 env_type=production
+env_name=production
 
 [recette]
 57.128.45.251
@@ -18,22 +19,26 @@ env_type=production
 dns_name=recette-1.{{domain_name}}.inserjeunes.incubateur.net
 host_name={{product_name}}-recette-1
 env_type=recette
+env_name=recette1
 
 [recette1new]
 91.134.6.195
 [recette1new:vars]
 dns_name=recette-1-new.{{domain_name}}.inserjeunes.incubateur.net
 host_name={{product_name}}-recette-1-new
-env_type=recette1new
+env_type=recette
+env_name=recette1new
 
 [recette2]
 91.134.19.45
 [recette2:vars]
 dns_name=recette-2.{{domain_name}}.inserjeunes.incubateur.net
 host_name={{product_name}}-recette-2
-env_type=recette2
+env_type=recette
+env_name=recette2
 
 [local]
 localhost ansible_host=127.0.0.1 ansible_connection=local
 [local:vars]
 env_type=local
+env_name=local
