feat: ajout d'un environnement de preprod

--- a/.github/workflows/_deploy.yml
+++ b/.github/workflows/_deploy.yml
@@ -8,6 +8,7 @@ on:
         required: true
         options:
           - production
+          - preproduction
           - recette
           - recette1new
           - recette2
