--- a/.infra/env.ini
+++ b/.infra/env.ini
@@ -13,6 +13,14 @@ host_name={{product_name}}-production
 env_type=production
 env_name=production
 
+[preproduction]
+91.134.55.91
+[preproduction:vars]
+dns_name=preprod.{{domain_name}}.inserjeunes.incubateur.net
+host_name={{product_name}}-preproduction
+env_type=production
+env_name=preproduction
+
 [recette]
 57.128.45.251
 [recette:vars]
