--- a/.infra/docker-compose.production.yml
+++ b/.infra/docker-compose.production.yml
@@ -79,9 +79,9 @@ services:
       JAVA_TIMEZONE: Europe/Paris
       MB_SITE_LOCALE: fr
       MB_SITE_URL: "{{dns_name}}/metabase"
-      # MB_DB_TYPE: postgres
-      # MB_DB_CONNECTION_URI: "{{vault[env_name].METABASE_DB_URI}}"
-      # MB_ENCRYPTION_SECRET_KEY: "{{vault[env_name].METABASE_ENCRYPTION_SECRET_KEY}}"
+      MB_DB_TYPE: postgres
+      MB_DB_CONNECTION_URI: "{{vault[env_name].METABASE_DB_URI}}"
+      MB_ENCRYPTION_SECRET_KEY: "{{vault[env_name].METABASE_ENCRYPTION_SECRET_KEY}}"
       MB_EMAIL_FROM_ADDRESS: "{{vault.METABASE_EMAIL_FROM_ADDRESS}}"
       MB_EMAIL_FROM_NAME: "{{vault.METABASE_EMAIL_FROM_NAME}}"
       MB_PASSWORD_COMPLEXITY: strong
