--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,7 @@ services:
       timeout: 5s
       retries: 12
       start_period: 10s
+    shm_size: 128mb
 
   smtp:
     image: axllent/mailpit:latest
