--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   },
   "scripts": {
     "cli": "node dist/index.js",
+    "migrations:create": "node scripts/createMigration.cjs",
     "build:dev": "tsup-node",
     "dev": "tsup-node --env.TSUP_WATCH true",
     "build": "tsup-node --env.NODE_ENV production",
