chore(recette): migrer de recette1new à recette1

--- a/.github/workflows/_deploy.yml
+++ b/.github/workflows/_deploy.yml
@@ -9,8 +9,7 @@ on:
         options:
           - production
           - preproduction
-          - recette
-          - recette1new
+          - recette1
           - recette2
       app_version:
         description: app version
