--- a/.infra/env.ini
+++ b/.infra/env.ini
@@ -21,21 +21,13 @@ host_name={{product_name}}-preproduction
 env_type=production
 env_name=preproduction
 
-[recette]
-57.128.45.251
-[recette:vars]
+[recette1]
+91.134.6.195
+[recette1:vars]
 dns_name=recette-1.{{domain_name}}.inserjeunes.incubateur.net
 host_name={{product_name}}-recette-1
 env_type=recette
 env_name=recette1
-
-[recette1new]
-91.134.6.195
-[recette1new:vars]
-dns_name=recette-1-new.{{domain_name}}.inserjeunes.incubateur.net
-host_name={{product_name}}-recette-1-new
-env_type=recette
-env_name=recette1new
 
 [recette2]
 91.134.19.45
