fix: env serveur

--- a/.infra/.env_server
+++ b/.infra/.env_server
@@ -1,5 +1,5 @@
 # Environment
-ENV={{ env_type }}
+ENV={{ env_name }}
 PUBLIC_URL={{ vault[env_name].PUBLIC_URL }}
 SERVER_PORT={{ vault[env_name].SERVER_PORT }}
 LOG_TYPE={{ vault[env_name].LOG_TYPE }}
