--- a/.infra/env.ini
+++ b/.infra/env.ini
@@ -13,13 +13,13 @@ host_name={{product_name}}-production
 env_type=production
 env_name=production
 
-[preproduction]
+[production]
 91.134.55.91
-[preproduction:vars]
-dns_name=preprod.{{domain_name}}.inserjeunes.incubateur.net
-host_name={{product_name}}-preproduction
+[production:vars]
+dns_name={{domain_name}}.inserjeunes.beta.gouv.fr
+host_name={{product_name}}-production
 env_type=production
-env_name=preproduction
+env_name=production
 
 [recette1]
 91.134.6.195
