fix: afficher le nom de l'action pour générer un label RC

--- a/.github/workflows/_generate_rc_label.yml
+++ b/.github/workflows/_generate_rc_label.yml
@@ -18,7 +18,7 @@ on:
         required: false
 
 jobs:
-  deploy:
+  generate_rc_label:
     name: Generate ${{ inputs.release_type }} RC
     runs-on: ubuntu-latest
     steps:
