fix: garder les crendentials github pour permettre de récupérer les tags

--- a/.github/workflows/_generate_rc_label.yml
+++ b/.github/workflows/_generate_rc_label.yml
@@ -24,6 +24,9 @@ jobs:
     steps:
       - name: Checkout project
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          persist-credentials: true
 
       - name: Run playbook
         run: .bin/product release:generate:rc-label ${{ inputs.release_type }} >> $GITHUB_OUTPUT
