fix: ajout d'un github output à la commande

--- a/.github/workflows/_generate_rc_label.yml
+++ b/.github/workflows/_generate_rc_label.yml
@@ -29,4 +29,4 @@ jobs:
           persist-credentials: true
 
       - name: Run playbook
-        run: .bin/product release:generate:rc-label ${{ inputs.release_type }} >> $GITHUB_OUTPUT
+        run: echo VERSION=$(.bin/product release:generate:rc-label ${{ inputs.release_type }}) >> $GITHUB_OUTPUT
