fix: nom de l'étape

--- a/.github/workflows/_generate_rc_label.yml
+++ b/.github/workflows/_generate_rc_label.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Run playbook
         id: run-playbook
         run: echo VERSION=$(.bin/product release:generate:rc-label ${{ inputs.release_type }}) >> $GITHUB_OUTPUT
-      - name: Get color
+      - name: Get version
         env:
           VERSION: ${{ steps.run-playbook.outputs.VERSION }}
         run: echo "Generated version is $VERSION"
