test: maj de la seed pour faire passer les tests

--- a/server/.env.test
+++ b/server/.env.test
@@ -14,7 +14,7 @@ PQSL_USER=postgres
 PSQL_PWD=password
 PSQL_URI=postgresql://postgres:password@127.0.0.1:5432/orion-test-VITEST_POOL_ID
 PSQL_CA=
-PSQL_LOG_LEVEL=query
+PSQL_LOG_LEVEL=error
 # Auth
 AUTH_JWT_SECRET=abcdef
 ACTIVATION_JWT_SECRET=abcdef
